Fixing minor bug with background alignment.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ html {
     margin-right: auto;
     width: auto;
     height: 70rem;
-    background-position: center;
+    background-position: center top;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
